--- a/Teaching.html
+++ b/Teaching.html
@@ -40,7 +40,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
   <w:TrackMoves>false</w:TrackMoves>
   <w:TrackFormatting/>
   <w:PunctuationKerning/>
-  <w:DrawingGridVerticalSpacing>7.8 °õ</w:DrawingGridVerticalSpacing>
+  <w:DrawingGridVerticalSpacing>7.8 ç£…</w:DrawingGridVerticalSpacing>
   <w:DisplayHorizontalDrawingGridEvery>0</w:DisplayHorizontalDrawingGridEvery>
   <w:DisplayVerticalDrawingGridEvery>2</w:DisplayVerticalDrawingGridEvery>
   <w:ValidateAgainstSchemas/>
@@ -674,7 +674,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-font-pitch:variable;
 	mso-font-signature:0 268435456 0 0 -2147483648 0;}
 @font-face
-	{font-family:ËÎÌå;
+	{font-family:å®‹ä½“;
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-alt:SimSun;
 	mso-font-charset:134;
@@ -682,7 +682,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-font-pitch:variable;
 	mso-font-signature:3 680460288 22 0 262145 0;}
 @font-face
-	{font-family:ºÚÌå;
+	{font-family:é»‘ä½“;
 	panose-1:2 1 6 9 6 1 1 1 1 1;
 	mso-font-alt:SimHei;
 	mso-font-charset:134;
@@ -704,7 +704,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-font-pitch:variable;
 	mso-font-signature:-469750017 -1073732485 9 0 511 0;}
 @font-face
-	{font-family:Î¢ÈíÑÅºÚ;
+	{font-family:å¾®è½¯é›…é»‘;
 	panose-1:2 11 5 3 2 2 4 2 2 4;
 	mso-font-charset:134;
 	mso-generic-font-family:swiss;
@@ -718,21 +718,21 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-font-pitch:variable;
 	mso-font-signature:647 0 0 0 159 0;}
 @font-face
-	{font-family:"\@Î¢ÈíÑÅºÚ";
+	{font-family:"\@å¾®è½¯é›…é»‘";
 	panose-1:2 11 5 3 2 2 4 2 2 4;
 	mso-font-charset:134;
 	mso-generic-font-family:swiss;
 	mso-font-pitch:variable;
 	mso-font-signature:-2147483001 718224464 22 0 262175 0;}
 @font-face
-	{font-family:"\@ºÚÌå";
+	{font-family:"\@é»‘ä½“";
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-charset:134;
 	mso-generic-font-family:modern;
 	mso-font-pitch:fixed;
 	mso-font-signature:-2147482945 953122042 22 0 262145 0;}
 @font-face
-	{font-family:"\@ËÎÌå";
+	{font-family:"\@å®‹ä½“";
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-charset:134;
 	mso-generic-font-family:auto;
@@ -753,7 +753,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-pagination:none;
 	font-size:14.0pt;
 	mso-bidi-font-size:11.0pt;
-	font-family:"Î¢ÈíÑÅºÚ",sans-serif;
+	font-family:"å¾®è½¯é›…é»‘",sans-serif;
 	mso-hansi-font-family:Georgia;
 	mso-bidi-font-family:"Times New Roman";
 	mso-bidi-theme-font:minor-bidi;
@@ -788,7 +788,7 @@ p.MsoListParagraph, li.MsoListParagraph, div.MsoListParagraph
 	mso-pagination:none;
 	font-size:14.0pt;
 	mso-bidi-font-size:11.0pt;
-	font-family:"Î¢ÈíÑÅºÚ",sans-serif;
+	font-family:"å¾®è½¯é›…é»‘",sans-serif;
 	mso-hansi-font-family:Georgia;
 	mso-bidi-font-family:"Times New Roman";
 	mso-bidi-theme-font:minor-bidi;
@@ -802,8 +802,8 @@ p.msonormal0, li.msonormal0, div.msonormal0
 	margin-left:0cm;
 	mso-pagination:widow-orphan;
 	font-size:12.0pt;
-	font-family:ËÎÌå;
-	mso-bidi-font-family:ËÎÌå;}
+	font-family:å®‹ä½“;
+	mso-bidi-font-family:å®‹ä½“;}
 span.SpellE
 	{mso-style-name:"";
 	mso-spl-e:yes;}
@@ -997,7 +997,7 @@ ul
 <style>
  /* Style Definitions */
  table.MsoNormalTable
-	{mso-style-name:ÆÕÍ¨±í¸ñ;
+	{mso-style-name:æ™®é€šè¡¨æ ¼;
 	mso-tstyle-rowband-size:0;
 	mso-tstyle-colband-size:0;
 	mso-style-noshow:yes;
@@ -1029,39 +1029,39 @@ margin-left:28.0pt;mso-para-margin-top:3.1pt;mso-para-margin-right:0cm;
 mso-para-margin-bottom:3.1pt;mso-para-margin-left:2.0gd;line-height:120%'><a
 name="_Hlk105530393"></a><span class=SpellE><span style='mso-bookmark:_Hlk105530393'><b><span
 lang=EN-US style='font-size:22.0pt;mso-bidi-font-size:18.0pt;line-height:120%;
-mso-hansi-font-family:Î¢ÈíÑÅºÚ'>Zhifang</span></b></span></span><span
+mso-hansi-font-family:å¾®è½¯é›…é»‘'>Zhifang</span></b></span></span><span
 style='mso-bookmark:_Hlk105530393'><b><span lang=EN-US style='font-size:22.0pt;
-mso-bidi-font-size:18.0pt;line-height:120%;mso-hansi-font-family:Î¢ÈíÑÅºÚ'> Liu</span></b></span><span
+mso-bidi-font-size:18.0pt;line-height:120%;mso-hansi-font-family:å¾®è½¯é›…é»‘'> Liu</span></b></span><span
 style='mso-bookmark:_Hlk105530393'><span style='font-size:22.0pt;mso-bidi-font-size:
-18.0pt;line-height:120%;mso-hansi-font-family:Î¢ÈíÑÅºÚ'>£¨</span></span><span
+18.0pt;line-height:120%;mso-hansi-font-family:å¾®è½¯é›…é»‘'>ï¼ˆ</span></span><span
 style='mso-bookmark:_Hlk105530393'><span style='font-size:24.0pt;mso-bidi-font-size:
-20.0pt;line-height:120%;font-family:ºÚÌå'>ÁõÖ¾·½</span></span><span
+20.0pt;line-height:120%;font-family:é»‘ä½“'>åˆ˜å¿—æ–¹</span></span><span
 style='mso-bookmark:_Hlk105530393'><span style='font-size:22.0pt;mso-bidi-font-size:
-18.0pt;line-height:120%;mso-hansi-font-family:Î¢ÈíÑÅºÚ'>£©<span lang=EN-US><o:p></o:p></span></span></span></p>
+18.0pt;line-height:120%;mso-hansi-font-family:å¾®è½¯é›…é»‘'>ï¼‰<span lang=EN-US><o:p></o:p></span></span></span></p>
 
 <span style='mso-bookmark:_Hlk105530393'></span>
 
 <p class=MsoNormal style='margin-top:3.1pt;margin-right:0cm;margin-bottom:3.1pt;
 margin-left:28.0pt;mso-para-margin-top:3.1pt;mso-para-margin-right:0cm;
 mso-para-margin-bottom:3.1pt;mso-para-margin-left:2.0gd;line-height:150%'><span
-lang=EN-US>School of Mathematical Sciences</span>£¬<span lang=EN-US>Tianjin
+lang=EN-US>School of Mathematical Sciences</span>ï¼Œ<span lang=EN-US>Tianjin
 Normal University</span></p>
 
 <p class=MsoNormal style='margin-top:3.1pt;margin-right:0cm;margin-bottom:3.1pt;
 margin-left:28.0pt;mso-para-margin-top:3.1pt;mso-para-margin-right:0cm;
 mso-para-margin-bottom:3.1pt;mso-para-margin-left:2.0gd;line-height:150%'><span
-lang=EN-US>Email</span>£º<span class=SpellE><span lang=EN-US>matlzhf</span></span><span
+lang=EN-US>Email</span>ï¼š<span class=SpellE><span lang=EN-US>matlzhf</span></span><span
 lang=EN-US> {at} <span class=SpellE>tjnu</span> {dot} <span class=SpellE>edu</span>
 {dot} <span class=SpellE>cn</span></span></p>
 
 <p class=MsoNormal style='margin-top:3.1pt;margin-right:0cm;margin-bottom:3.1pt;
 margin-left:28.0pt;mso-para-margin-top:3.1pt;mso-para-margin-right:0cm;
-mso-para-margin-bottom:3.1pt;mso-para-margin-left:2.0gd;line-height:150%'>Ìì½òÊ¦·¶´óÑ§ÊıÑ§¿ÆÑ§Ñ§Ôº</p>
+mso-para-margin-bottom:3.1pt;mso-para-margin-left:2.0gd;line-height:150%'>å¤©æ´¥å¸ˆèŒƒå¤§å­¦æ•°å­¦ç§‘å­¦å­¦é™¢</p>
 
 <p class=MsoNormal style='margin-top:3.1pt;margin-right:0cm;margin-bottom:3.1pt;
 margin-left:28.0pt;mso-para-margin-top:3.1pt;mso-para-margin-right:0cm;
-mso-para-margin-bottom:3.1pt;mso-para-margin-left:2.0gd;line-height:150%'>Ìì½òÊĞÎ÷ÇàÇø±öË®Î÷µÀ<span
-lang=EN-US>393</span>ºÅ£¬<span lang=EN-US>300387</span></p>
+mso-para-margin-bottom:3.1pt;mso-para-margin-left:2.0gd;line-height:150%'>å¤©æ´¥å¸‚è¥¿é’åŒºå®¾æ°´è¥¿é“<span
+lang=EN-US>393</span>å·ï¼Œ<span lang=EN-US>300387</span></p>
 
 <p class=MsoNormal style='margin-top:3.1pt;margin-right:0cm;margin-bottom:3.1pt;
 margin-left:28.0pt;mso-para-margin-top:3.1pt;mso-para-margin-right:0cm;
@@ -1083,7 +1083,7 @@ lang=EN-US>============================================</span></p>
 
 <p class=MsoNormal style='margin-top:3.1pt;margin-right:0cm;margin-bottom:3.1pt;
 margin-left:28.0pt;mso-para-margin-top:3.1pt;mso-para-margin-right:0cm;
-mso-para-margin-bottom:3.1pt;mso-para-margin-left:2.0gd;line-height:150%'><b>±¾¿ÆÉú¿Î³Ì£º<span
+mso-para-margin-bottom:3.1pt;mso-para-margin-left:2.0gd;line-height:150%'><b>æœ¬ç§‘ç”Ÿè¯¾ç¨‹ï¼š<span
 lang=EN-US><o:p></o:p></span></b></p>
 
 <p class=MsoListParagraph align=left style='margin-top:3.1pt;margin-right:0cm;
@@ -1093,8 +1093,8 @@ text-indent:-.55pt;mso-char-indent-count:0;line-height:150%;mso-list:l1 level1 l
 lang=EN-US style='font-size:9.0pt;mso-bidi-font-size:11.0pt;line-height:150%;
 font-family:Wingdings;mso-fareast-font-family:Wingdings;mso-bidi-font-family:
 Wingdings'><span style='mso-list:Ignore'>&iexcl;<span style='font:7.0pt "Times New Roman"'>
-</span></span></span><![endif]><span lang=EN-US>2021-2022</span>Äê´º¼¾£º<span
-lang=EN-US>C</span>ÓïÑÔ»ù´¡£¨<span lang=EN-US>Basics of C Language</span>£©</p>
+</span></span></span><![endif]><span lang=EN-US>2021-2022</span>å¹´æ˜¥å­£ï¼š<span
+lang=EN-US>C</span>è¯­è¨€åŸºç¡€ï¼ˆ<span lang=EN-US>Basics of C Language</span>ï¼‰</p>
 
 <p class=MsoListParagraph align=left style='margin-top:3.1pt;margin-right:0cm;
 margin-bottom:3.1pt;margin-left:28.55pt;mso-para-margin-top:3.1pt;mso-para-margin-right:
@@ -1103,8 +1103,8 @@ text-indent:-.55pt;mso-char-indent-count:0;line-height:150%;mso-list:l1 level1 l
 lang=EN-US style='font-size:9.0pt;mso-bidi-font-size:11.0pt;line-height:150%;
 font-family:Wingdings;mso-fareast-font-family:Wingdings;mso-bidi-font-family:
 Wingdings'><span style='mso-list:Ignore'>&iexcl;<span style='font:7.0pt "Times New Roman"'>
-</span></span></span><![endif]><span lang=EN-US>2021-2022</span>ÄêÇï¼¾£ºÊıÑ§Ä£ĞÍÓëÊµÑé£¨<span
-lang=EN-US>Mathematical Modeling and Experiment</span>£©</p>
+</span></span></span><![endif]><span lang=EN-US>2021-2022</span>å¹´ç§‹å­£ï¼šæ•°å­¦æ¨¡å‹ä¸å®éªŒï¼ˆ<span
+lang=EN-US>Mathematical Modeling and Experiment</span>ï¼‰</p>
 
 <p class=MsoListParagraph align=left style='margin-top:3.1pt;margin-right:0cm;
 margin-bottom:3.1pt;margin-left:28.55pt;mso-para-margin-top:3.1pt;mso-para-margin-right:
@@ -1113,8 +1113,8 @@ text-indent:-.55pt;mso-char-indent-count:0;line-height:150%;mso-list:l1 level1 l
 lang=EN-US style='font-size:9.0pt;mso-bidi-font-size:11.0pt;line-height:150%;
 font-family:Wingdings;mso-fareast-font-family:Wingdings;mso-bidi-font-family:
 Wingdings'><span style='mso-list:Ignore'>&iexcl;<span style='font:7.0pt "Times New Roman"'>
-</span></span></span><![endif]><span lang=EN-US>2020-2021</span>Äê´º¼¾£ºÊıÖµ·ÖÎö£¨<span
-lang=EN-US>Numerical Analysis</span>£©</p>
+</span></span></span><![endif]><span lang=EN-US>2020-2021</span>å¹´æ˜¥å­£ï¼šæ•°å€¼åˆ†æï¼ˆ<span
+lang=EN-US>Numerical Analysis</span>ï¼‰</p>
 
 <p class=MsoListParagraph align=left style='margin-top:3.1pt;margin-right:0cm;
 margin-bottom:3.1pt;margin-left:28.55pt;mso-para-margin-top:3.1pt;mso-para-margin-right:
@@ -1123,8 +1123,8 @@ text-indent:-.55pt;mso-char-indent-count:0;line-height:150%;mso-list:l1 level1 l
 lang=EN-US style='font-size:9.0pt;mso-bidi-font-size:11.0pt;line-height:150%;
 font-family:Wingdings;mso-fareast-font-family:Wingdings;mso-bidi-font-family:
 Wingdings'><span style='mso-list:Ignore'>&iexcl;<span style='font:7.0pt "Times New Roman"'>
-</span></span></span><![endif]><span lang=EN-US>2020-2021</span>Äê´º¼¾£ºÊı×ÖÍ¼Ïñ´¦Àí£¨<span
-lang=EN-US>Digital Image Processing</span>£©</p>
+</span></span></span><![endif]><span lang=EN-US>2020-2021</span>å¹´æ˜¥å­£ï¼šæ•°å­—å›¾åƒå¤„ç†ï¼ˆ<span
+lang=EN-US>Digital Image Processing</span>ï¼‰</p>
 
 <p class=MsoListParagraph align=left style='margin-top:3.1pt;margin-right:0cm;
 margin-bottom:3.1pt;margin-left:28.55pt;mso-para-margin-top:3.1pt;mso-para-margin-right:
@@ -1133,8 +1133,8 @@ text-indent:-.55pt;mso-char-indent-count:0;line-height:150%;mso-list:l1 level1 l
 lang=EN-US style='font-size:9.0pt;mso-bidi-font-size:11.0pt;line-height:150%;
 font-family:Wingdings;mso-fareast-font-family:Wingdings;mso-bidi-font-family:
 Wingdings'><span style='mso-list:Ignore'>&iexcl;<span style='font:7.0pt "Times New Roman"'>
-</span></span></span><![endif]><span lang=EN-US>2020-2021</span>ÄêÇï¼¾£ºÊıÑ§Ä£ĞÍÓëÊµÑé£¨<span
-lang=EN-US>Mathematical Modeling and Experiment</span>£©</p>
+</span></span></span><![endif]><span lang=EN-US>2020-2021</span>å¹´ç§‹å­£ï¼šæ•°å­¦æ¨¡å‹ä¸å®éªŒï¼ˆ<span
+lang=EN-US>Mathematical Modeling and Experiment</span>ï¼‰</p>
 
 <p class=MsoListParagraph align=left style='margin-top:3.1pt;margin-right:0cm;
 margin-bottom:3.1pt;margin-left:28.55pt;mso-para-margin-top:3.1pt;mso-para-margin-right:
@@ -1143,8 +1143,8 @@ text-indent:-.55pt;mso-char-indent-count:0;line-height:150%;mso-list:l1 level1 l
 lang=EN-US style='font-size:9.0pt;mso-bidi-font-size:11.0pt;line-height:150%;
 font-family:Wingdings;mso-fareast-font-family:Wingdings;mso-bidi-font-family:
 Wingdings'><span style='mso-list:Ignore'>&iexcl;<span style='font:7.0pt "Times New Roman"'>
-</span></span></span><![endif]><span lang=EN-US>2019-2020</span>Äê´º¼¾£º<span
-lang=EN-US>C</span>ÓïÑÔ»ù´¡£¨<span lang=EN-US>Basics of C Language</span>£©</p>
+</span></span></span><![endif]><span lang=EN-US>2019-2020</span>å¹´æ˜¥å­£ï¼š<span
+lang=EN-US>C</span>è¯­è¨€åŸºç¡€ï¼ˆ<span lang=EN-US>Basics of C Language</span>ï¼‰</p>
 
 <p class=MsoListParagraph align=left style='margin-top:3.1pt;margin-right:0cm;
 margin-bottom:3.1pt;margin-left:28.55pt;mso-para-margin-top:3.1pt;mso-para-margin-right:
@@ -1153,8 +1153,8 @@ text-indent:-.55pt;mso-char-indent-count:0;line-height:150%;mso-list:l1 level1 l
 lang=EN-US style='font-size:9.0pt;mso-bidi-font-size:11.0pt;line-height:150%;
 font-family:Wingdings;mso-fareast-font-family:Wingdings;mso-bidi-font-family:
 Wingdings'><span style='mso-list:Ignore'>&iexcl;<span style='font:7.0pt "Times New Roman"'>
-</span></span></span><![endif]><span lang=EN-US>2019-2020</span>ÄêÇï¼¾£º¸ßµÈÊıÑ§£¨<span
-lang=EN-US>Advanced Mathematics</span>£©</p>
+</span></span></span><![endif]><span lang=EN-US>2019-2020</span>å¹´ç§‹å­£ï¼šé«˜ç­‰æ•°å­¦ï¼ˆ<span
+lang=EN-US>Advanced Mathematics</span>ï¼‰</p>
 
 <p class=MsoNormal style='margin-top:3.1pt;margin-right:0cm;margin-bottom:3.1pt;
 margin-left:28.0pt;mso-para-margin-top:3.1pt;mso-para-margin-right:0cm;
@@ -1163,7 +1163,7 @@ lang=EN-US><o:p>&nbsp;</o:p></span></b></p>
 
 <p class=MsoNormal style='margin-top:3.1pt;margin-right:0cm;margin-bottom:3.1pt;
 margin-left:28.0pt;mso-para-margin-top:3.1pt;mso-para-margin-right:0cm;
-mso-para-margin-bottom:3.1pt;mso-para-margin-left:2.0gd;line-height:150%'><b>ÑĞ¾¿Éú¿Î³Ì£º<span
+mso-para-margin-bottom:3.1pt;mso-para-margin-left:2.0gd;line-height:150%'><b>ç ”ç©¶ç”Ÿè¯¾ç¨‹ï¼š<span
 lang=EN-US><o:p></o:p></span></b></p>
 
 <p class=MsoListParagraph align=left style='margin-top:3.1pt;margin-right:0cm;
@@ -1173,10 +1173,10 @@ text-indent:-.55pt;mso-char-indent-count:0;line-height:150%;mso-list:l0 level1 l
 lang=EN-US style='font-size:9.0pt;mso-bidi-font-size:11.0pt;line-height:150%;
 font-family:Wingdings;mso-fareast-font-family:Wingdings;mso-bidi-font-family:
 Wingdings'><span style='mso-list:Ignore'>&iexcl;<span style='font:7.0pt "Times New Roman"'>
-</span></span></span><![endif]><span lang=EN-US>2021-2022</span>Äê´º¼¾£º<span
-lang=EN-US><a href="Teaching_files/Êı×ÖÍ¼Ïñ´¦Àí/Index.html"><span lang=EN-US><span
-lang=EN-US>Êı×ÖÍ¼Ïñ´¦Àí£¨Digital Image Processing</span></span><span lang=EN-US><span
-lang=EN-US>£©</span></span></a></span></p>
+</span></span></span><![endif]><span lang=EN-US>2021-2022</span>å¹´æ˜¥å­£ï¼š<span
+lang=EN-US><a href="Teaching_files/æ•°å­—å›¾åƒå¤„ç†/Index.html"><span lang=EN-US><span
+lang=EN-US>æ•°å­—å›¾åƒå¤„ç†ï¼ˆDigital Image Processing</span></span><span lang=EN-US><span
+lang=EN-US>ï¼‰</span></span></a></span></p>
 
 <p class=MsoListParagraph align=left style='margin-top:3.1pt;margin-right:0cm;
 margin-bottom:3.1pt;margin-left:28.55pt;mso-para-margin-top:3.1pt;mso-para-margin-right:
@@ -1185,8 +1185,8 @@ text-indent:-.55pt;mso-char-indent-count:0;line-height:150%;mso-list:l0 level1 l
 lang=EN-US style='font-size:9.0pt;mso-bidi-font-size:11.0pt;line-height:150%;
 font-family:Wingdings;mso-fareast-font-family:Wingdings;mso-bidi-font-family:
 Wingdings'><span style='mso-list:Ignore'>&iexcl;<span style='font:7.0pt "Times New Roman"'>
-</span></span></span><![endif]><span lang=EN-US>2020-2021</span>Äê´º¼¾£ºÊı×ÖÍ¼Ïñ´¦Àí£¨<span
-lang=EN-US>Digital Image Processing</span>£©</p>
+</span></span></span><![endif]><span lang=EN-US>2020-2021</span>å¹´æ˜¥å­£ï¼šæ•°å­—å›¾åƒå¤„ç†ï¼ˆ<span
+lang=EN-US>Digital Image Processing</span>ï¼‰</p>
 
 <p class=MsoNormal style='margin-top:3.1pt;margin-right:0cm;margin-bottom:3.1pt;
 margin-left:0cm;line-height:150%'><span lang=EN-US><o:p>&nbsp;</o:p></span></p>
