--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
   <w:TrackMoves>false</w:TrackMoves>
   <w:TrackFormatting/>
   <w:PunctuationKerning/>
-  <w:DrawingGridVerticalSpacing>7.8 °õ</w:DrawingGridVerticalSpacing>
+  <w:DrawingGridVerticalSpacing>7.8 Â°Ãµ</w:DrawingGridVerticalSpacing>
   <w:DisplayHorizontalDrawingGridEvery>0</w:DisplayHorizontalDrawingGridEvery>
   <w:DisplayVerticalDrawingGridEvery>2</w:DisplayVerticalDrawingGridEvery>
   <w:ValidateAgainstSchemas/>
@@ -672,7 +672,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-font-pitch:variable;
 	mso-font-signature:0 268435456 0 0 -2147483648 0;}
 @font-face
-	{font-family:ËÎÌå;
+	{font-family:Ã‹ÃÃŒÃ¥;
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-alt:SimSun;
 	mso-font-charset:134;
@@ -680,7 +680,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-font-pitch:variable;
 	mso-font-signature:3 680460288 22 0 262145 0;}
 @font-face
-	{font-family:ºÚÌå;
+	{font-family:ÂºÃšÃŒÃ¥;
 	panose-1:2 1 6 9 6 1 1 1 1 1;
 	mso-font-alt:SimHei;
 	mso-font-charset:134;
@@ -709,28 +709,28 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-font-pitch:variable;
 	mso-font-signature:647 0 0 0 159 0;}
 @font-face
-	{font-family:Î¢ÈíÑÅºÚ;
+	{font-family:ÃÂ¢ÃˆÃ­Ã‘Ã…ÂºÃš;
 	panose-1:2 11 5 3 2 2 4 2 2 4;
 	mso-font-charset:134;
 	mso-generic-font-family:swiss;
 	mso-font-pitch:variable;
 	mso-font-signature:-2147483001 718224464 22 0 262175 0;}
 @font-face
-	{font-family:"\@Î¢ÈíÑÅºÚ";
+	{font-family:"\@ÃÂ¢ÃˆÃ­Ã‘Ã…ÂºÃš";
 	panose-1:2 11 5 3 2 2 4 2 2 4;
 	mso-font-charset:134;
 	mso-generic-font-family:swiss;
 	mso-font-pitch:variable;
 	mso-font-signature:-2147483001 718224464 22 0 262175 0;}
 @font-face
-	{font-family:"\@ËÎÌå";
+	{font-family:"\@Ã‹ÃÃŒÃ¥";
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-charset:134;
 	mso-generic-font-family:auto;
 	mso-font-pitch:variable;
 	mso-font-signature:3 680460288 22 0 262145 0;}
 @font-face
-	{font-family:"\@ºÚÌå";
+	{font-family:"\@ÂºÃšÃŒÃ¥";
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-charset:134;
 	mso-generic-font-family:modern;
@@ -754,7 +754,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-pagination:none;
 	font-size:14.0pt;
 	mso-bidi-font-size:11.0pt;
-	font-family:"Î¢ÈíÑÅºÚ",sans-serif;
+	font-family:"ÃÂ¢ÃˆÃ­Ã‘Ã…ÂºÃš",sans-serif;
 	mso-hansi-font-family:Georgia;
 	mso-bidi-font-family:"Times New Roman";
 	mso-bidi-theme-font:minor-bidi;
@@ -792,7 +792,7 @@ p.MsoListParagraph, li.MsoListParagraph, div.MsoListParagraph
 	mso-pagination:none;
 	font-size:14.0pt;
 	mso-bidi-font-size:11.0pt;
-	font-family:"Î¢ÈíÑÅºÚ",sans-serif;
+	font-family:"ÃÂ¢ÃˆÃ­Ã‘Ã…ÂºÃš",sans-serif;
 	mso-hansi-font-family:Georgia;
 	mso-bidi-font-family:"Times New Roman";
 	mso-bidi-theme-font:minor-bidi;
@@ -810,8 +810,8 @@ p.msonormal0, li.msonormal0, div.msonormal0
 	mso-para-margin-left:2.0gd;
 	mso-pagination:widow-orphan;
 	font-size:12.0pt;
-	font-family:ËÎÌå;
-	mso-bidi-font-family:ËÎÌå;}
+	font-family:Ã‹ÃÃŒÃ¥;
+	mso-bidi-font-family:Ã‹ÃÃŒÃ¥;}
 .MsoChpDefault
 	{mso-style-type:export-only;
 	mso-default-props:yes;
@@ -1002,7 +1002,7 @@ ul
 <style>
  /* Style Definitions */
  table.MsoNormalTable
-	{mso-style-name:ÆÕÍ¨±í¸ñ;
+	{mso-style-name:Ã†Ã•ÃÂ¨Â±Ã­Â¸Ã±;
 	mso-tstyle-rowband-size:0;
 	mso-tstyle-colband-size:0;
 	mso-style-noshow:yes;
@@ -1033,31 +1033,31 @@ word-wrap:break-word;text-justify-trim:punctuation'>
 margin-left:28.0pt;mso-para-margin-top:3.1pt;mso-para-margin-right:0cm;
 mso-para-margin-bottom:3.1pt;mso-para-margin-left:0gd;line-height:120%'><b><span
 lang=EN-US style='font-size:22.0pt;mso-bidi-font-size:18.0pt;line-height:120%;
-mso-hansi-font-family:Î¢ÈíÑÅºÚ'>Zhifang Liu</span></b><span style='font-size:22.0pt;
-mso-bidi-font-size:18.0pt;line-height:120%;mso-hansi-font-family:Î¢ÈíÑÅºÚ'>£¨</span><span
+mso-hansi-font-family:ÃÂ¢ÃˆÃ­Ã‘Ã…ÂºÃš'>Zhifang Liu</span></b><span style='font-size:22.0pt;
+mso-bidi-font-size:18.0pt;line-height:120%;mso-hansi-font-family:ÃÂ¢ÃˆÃ­Ã‘Ã…ÂºÃš'>Â£Â¨</span><span
 style='font-size:24.0pt;mso-bidi-font-size:20.0pt;line-height:120%;font-family:
-ºÚÌå'>ÁõÖ¾·½</span><span style='font-size:22.0pt;mso-bidi-font-size:18.0pt;
-line-height:120%;mso-hansi-font-family:Î¢ÈíÑÅºÚ'>£©<span lang=EN-US><o:p></o:p></span></span></p>
+ÂºÃšÃŒÃ¥'>ÃÃµÃ–Â¾Â·Â½</span><span style='font-size:22.0pt;mso-bidi-font-size:18.0pt;
+line-height:120%;mso-hansi-font-family:ÃÂ¢ÃˆÃ­Ã‘Ã…ÂºÃš'>Â£Â©<span lang=EN-US><o:p></o:p></span></span></p>
 
 <p class=MsoNormal style='margin-top:3.1pt;margin-right:0cm;margin-bottom:3.1pt;
 margin-left:28.0pt;mso-para-margin-top:3.1pt;mso-para-margin-right:0cm;
 mso-para-margin-bottom:3.1pt;mso-para-margin-left:0gd;line-height:150%'><span
-lang=EN-US>School of Mathematical Sciences</span>£¬<span lang=EN-US>Tianjin
+lang=EN-US>School of Mathematical Sciences</span>Â£Â¬<span lang=EN-US>Tianjin
 Normal University</span></p>
 
 <p class=MsoNormal style='margin-top:3.1pt;margin-right:0cm;margin-bottom:3.1pt;
 margin-left:28.0pt;mso-para-margin-top:3.1pt;mso-para-margin-right:0cm;
 mso-para-margin-bottom:3.1pt;mso-para-margin-left:0gd;line-height:150%'><span
-lang=EN-US>Email</span>£º<span lang=EN-US>matlzhf {at} tjnu {dot} edu {dot} cn</span></p>
+lang=EN-US>Email</span>Â£Âº<span lang=EN-US>matlzhf {at} tjnu {dot} edu {dot} cn</span></p>
 
 <p class=MsoNormal style='margin-top:3.1pt;margin-right:0cm;margin-bottom:3.1pt;
 margin-left:28.0pt;mso-para-margin-top:3.1pt;mso-para-margin-right:0cm;
-mso-para-margin-bottom:3.1pt;mso-para-margin-left:0gd;line-height:150%'>Ìì½òÊ¦·¶´óÑ§ÊıÑ§¿ÆÑ§Ñ§Ôº</p>
+mso-para-margin-bottom:3.1pt;mso-para-margin-left:0gd;line-height:150%'>ÃŒÃ¬Â½Ã²ÃŠÂ¦Â·Â¶Â´Ã³Ã‘Â§ÃŠÃ½Ã‘Â§Â¿Ã†Ã‘Â§Ã‘Â§Ã”Âº</p>
 
 <p class=MsoNormal style='margin-top:3.1pt;margin-right:0cm;margin-bottom:3.1pt;
 margin-left:28.0pt;mso-para-margin-top:3.1pt;mso-para-margin-right:0cm;
-mso-para-margin-bottom:3.1pt;mso-para-margin-left:0gd;line-height:150%'>Ìì½òÊĞÎ÷ÇàÇø±öË®Î÷µÀ<span
-lang=EN-US>393</span>ºÅ£¬<span lang=EN-US>300387</span></p>
+mso-para-margin-bottom:3.1pt;mso-para-margin-left:0gd;line-height:150%'>ÃŒÃ¬Â½Ã²ÃŠÃÃÃ·Ã‡Ã Ã‡Ã¸Â±Ã¶Ã‹Â®ÃÃ·ÂµÃ€<span
+lang=EN-US>393</span>ÂºÃ…Â£Â¬<span lang=EN-US>300387</span></p>
 
 <p class=MsoNormal style='margin-top:3.1pt;margin-right:0cm;margin-bottom:3.1pt;
 margin-left:28.0pt;mso-para-margin-top:3.1pt;mso-para-margin-right:0cm;
@@ -1116,7 +1116,7 @@ font-family:Wingdings;mso-fareast-font-family:Wingdings;mso-bidi-font-family:
 Wingdings;mso-bidi-font-weight:bold'><span style='mso-list:Ignore'>&iexcl;<span
 style='font:7.0pt "Times New Roman"'>&nbsp; </span></span></span><![endif]><span
 lang=EN-US>Ph. D., School of Mathematical Sciences, Nankai University, 09/2015 </span><span
-lang=EN-US style='font-family:"Georgia",serif;mso-ascii-font-family:Î¢ÈíÑÅºÚ'>¨C</span><span
+lang=EN-US style='font-family:"Georgia",serif;mso-ascii-font-family:ÃÂ¢ÃˆÃ­Ã‘Ã…ÂºÃš'>Â¨C</span><span
 lang=EN-US> 06/2019.<b><o:p></o:p></b></span></p>
 
 <p class=MsoListParagraph style='margin-top:3.1pt;margin-right:0cm;margin-bottom:
@@ -1129,7 +1129,7 @@ Wingdings;mso-bidi-font-weight:bold'><span style='mso-list:Ignore'>&iexcl;<span
 style='font:7.0pt "Times New Roman"'>&nbsp; </span></span></span><![endif]><span
 lang=EN-US>Visiting student, Department of Mathematics, National University of
 Singapore, 09/2018 </span><span lang=EN-US style='font-family:"Georgia",serif;
-mso-ascii-font-family:Î¢ÈíÑÅºÚ'>¨C</span><span lang=EN-US> 03/2019.<b><o:p></o:p></b></span></p>
+mso-ascii-font-family:ÃÂ¢ÃˆÃ­Ã‘Ã…ÂºÃš'>Â¨C</span><span lang=EN-US> 03/2019.<b><o:p></o:p></b></span></p>
 
 <p class=MsoListParagraph style='margin-top:3.1pt;margin-right:0cm;margin-bottom:
 3.1pt;margin-left:49.0pt;mso-para-margin-top:3.1pt;mso-para-margin-right:0cm;
@@ -1140,7 +1140,7 @@ font-family:Wingdings;mso-fareast-font-family:Wingdings;mso-bidi-font-family:
 Wingdings'><span style='mso-list:Ignore'>&iexcl;<span style='font:7.0pt "Times New Roman"'>&nbsp;
 </span></span></span><![endif]><span lang=EN-US>M. Sc., School of Mathematical
 Sciences, Tianjin Normal University, 09/2012 </span><span lang=EN-US
-style='font-family:"Georgia",serif;mso-ascii-font-family:Î¢ÈíÑÅºÚ'>¨C</span><span
+style='font-family:"Georgia",serif;mso-ascii-font-family:ÃÂ¢ÃˆÃ­Ã‘Ã…ÂºÃš'>Â¨C</span><span
 lang=EN-US> 06/2015.</span></p>
 
 <p class=MsoListParagraph style='margin-top:3.1pt;margin-right:0cm;margin-bottom:
@@ -1152,7 +1152,7 @@ font-family:Wingdings;mso-fareast-font-family:Wingdings;mso-bidi-font-family:
 Wingdings'><span style='mso-list:Ignore'>&iexcl;<span style='font:7.0pt "Times New Roman"'>&nbsp;
 </span></span></span><![endif]><span lang=EN-US>B. S., School of Mathematical
 Sciences, Tianjin Normal University, 09/2008 </span><span lang=EN-US
-style='font-family:"Georgia",serif;mso-ascii-font-family:Î¢ÈíÑÅºÚ'>¨C</span><span
+style='font-family:"Georgia",serif;mso-ascii-font-family:ÃÂ¢ÃˆÃ­Ã‘Ã…ÂºÃš'>Â¨C</span><span
 lang=EN-US> 06/2012.</span></p>
 
 <p class=MsoListParagraph style='margin-top:3.1pt;margin-right:0cm;margin-bottom:
@@ -1172,9 +1172,9 @@ mso-char-indent-count:0;line-height:150%;mso-list:l0 level1 lfo4'><![if !support
 lang=EN-US style='font-size:9.0pt;mso-bidi-font-size:11.0pt;line-height:150%;
 font-family:Wingdings;mso-fareast-font-family:Wingdings;mso-bidi-font-family:
 Wingdings'><span style='mso-list:Ignore'>&iexcl;<span style='font:7.0pt "Times New Roman"'>&nbsp;
-</span></span></span><![endif]><span lang=EN-US>Lecturer</span>£¬<span
-lang=EN-US>School of Mathematical Sciences</span>£¬<span lang=EN-US>Tianjin
-Normal University</span>£¬<span lang=EN-US>07/2019 - present.</span></p>
+</span></span></span><![endif]><span lang=EN-US>Lecturer</span>Â£Â¬<span
+lang=EN-US>School of Mathematical Sciences</span>Â£Â¬<span lang=EN-US>Tianjin
+Normal University</span>Â£Â¬<span lang=EN-US>07/2019 - present.</span></p>
 
 <p class=MsoNormal style='margin-top:3.1pt;margin-right:0cm;margin-bottom:3.1pt;
 margin-left:28.0pt;mso-para-margin-top:3.1pt;mso-para-margin-right:0cm;
@@ -1220,11 +1220,11 @@ mso-para-margin-bottom:3.1pt;mso-para-margin-left:0gd'><span lang=EN-US><o:p>&nb
 <p class=MsoNormal style='margin-top:3.1pt;margin-right:0cm;margin-bottom:3.1pt;
 margin-left:28.0pt;mso-para-margin-top:3.1pt;mso-para-margin-right:0cm;
 mso-para-margin-bottom:3.1pt;mso-para-margin-left:0gd'><b><span lang=EN-US>Last
-Update</span></b>£º<!--[if supportFields]><span lang=EN-US><span
+Update</span></b>Â£Âº<!--[if supportFields]><span lang=EN-US><span
 style='mso-element:field-begin'></span></span><span lang=EN-US
-style='mso-hansi-font-family:Î¢ÈíÑÅºÚ'> DATE \@ &quot;yyyy-MM-dd&quot; </span><span
+style='mso-hansi-font-family:ÃÂ¢ÃˆÃ­Ã‘Ã…ÂºÃš'> DATE \@ &quot;yyyy-MM-dd&quot; </span><span
 lang=EN-US><span style='mso-element:field-separator'></span></span><![endif]--><span
-lang=EN-US style='mso-hansi-font-family:Î¢ÈíÑÅºÚ;mso-no-proof:yes'>2022-11-07</span><!--[if supportFields]><span
+lang=EN-US style='mso-hansi-font-family:ÃÂ¢ÃˆÃ­Ã‘Ã…ÂºÃš;mso-no-proof:yes'>2022-11-07</span><!--[if supportFields]><span
 lang=EN-US><span style='mso-element:field-end'></span></span><![endif]--><span
 lang=EN-US>.</span></p>
 
